kubernetes/apps/network/ingressroutes/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: domain-0-prod-tls
